feat:(historical): add caching of daily ticker prices and metrics #159
